--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,14 @@
         </dependency>
     </dependencies>
 
-
+    <profiles>
+        <profile>
+            <id>production</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
