--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+spring.datasource.url=jdbc:postgresql://${PG_HOSTNAME}:${PG_PORT}/${PG_DB_NAME}
+spring.datasource.username=${PG_USERNAME}
+spring.datasource.password=${PG_PASSWORD}
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+jwt.secret=${JWT}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
