--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 server.port=9090
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/carinventory
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/carinventory
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 spring.jpa.show-sql=true
 server.error.include-stacktrace=ALWAYS
